Add description to package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "brest"
 version = "0.1.0"
 edition = "2021"
+description = "Simple response format for web apis"
 authors = ["Vero <veronoicc@proton.me>"]
 license = "BSD-3-Clause"
 documentation = "https://docs.rs/brest/latest/brest"
