Cargo update and axum compat

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,11 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"], optional = true }
 schemars ={ version = "0.8", optional = true }
+axum = { version = "0.8.4",features = ["json"], default-features = false, optional = true}
 
 [features]
+default = ["serde", "try"]
 schemars = ["dep:schemars"]
 try = []
 serde = ["dep:serde"]
+axum = ["dep:axum", "serde"]
