--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ serde = { version = "1.0", features = ["derive"] }
 schemars ={ version = "0.8", optional = true }
 axum = { version = "0.8",features = ["json", "matched-path", "form", "query", "macros"], default-features = false, optional = true}
 
+[dev-dependencies]
+serde_json = "1.0"
+
 [features]
 schemars = ["dep:schemars"]
 try = []
